--- a/Todos_app/package.json
+++ b/Todos_app/package.json
@@ -16,6 +16,7 @@
     "@babel/preset-env": "^7.14.4",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
+    "uuid": "^3.4.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0",
     "webpack-dev-server": "^3.11.2"
